DB context creation

--- a/DotNetBackend/ViveksHomoeoClinic/ViveksHomoeoClinic/ViveksHomoeoClinic.csproj
+++ b/DotNetBackend/ViveksHomoeoClinic/ViveksHomoeoClinic/ViveksHomoeoClinic.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Helpers\" />
     <Folder Include="Models\DTO\" />
     <Folder Include="Repositories\Interfaces\" />
     <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
   </ItemGroup>
 
 </Project>
