--- a/DotNetBackend/ViveksHomoeoClinic/ViveksHomoeoClinic/appsettings.json
+++ b/DotNetBackend/ViveksHomoeoClinic/ViveksHomoeoClinic/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //TKY-DEV Branch
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=viveks_homoeo_clinic;Username=admin;Password=admin"
   },
