--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@
 /.vs/ViveksHomoeoClinic/FileContentIndex/b7783d45-daf5-46a9-99a5-356075542889.vsidx
 /.vs/ViveksHomoeoClinic/FileContentIndex/ca56480e-0c28-4a40-a35b-a23a50e81ee4.vsidx
 /.vs/ViveksHomoeoClinic/FileContentIndex/dc55118a-1436-4299-911a-c620eb1705d4.vsidx
+/.vs/slnx.sqlite
