--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@
 /.vs/ViveksHomoeoClinic/FileContentIndex/ca56480e-0c28-4a40-a35b-a23a50e81ee4.vsidx
 /.vs/ViveksHomoeoClinic/FileContentIndex/dc55118a-1436-4299-911a-c620eb1705d4.vsidx
 /.vs/slnx.sqlite
+/.vs/ViveksHomoeoClinic/FileContentIndex/9993b64c-86ea-48a1-bdcd-8f77c294968f.vsidx
+/.vs/ViveksHomoeoClinic/v17/DocumentLayout.backup.json
