Git ignore modification

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,9 @@
 /DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/7723424d-ff4e-4cdc-97c0-369abfb05e2d.vsidx
 /DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/c2fffe2a-b67c-4180-a330-9b56e9b1e8a9.vsidx
 /DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/f16b1781-facc-4c85-8c2a-609835ccb62f.vsidx
+/DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/731d8493-5a67-4ad0-8569-8d8a5d8cfb24.vsidx
+/DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/864ca101-7e4a-4106-a048-87fb0346bd35.vsidx
+/DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/89b3d2f0-22dd-468f-ad6c-7e7ffedf30c1.vsidx
+/DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/e4531c21-d8de-4627-b8b1-f99919facd4f.vsidx
+/DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/f9c90bb4-730e-446a-b22c-4b1874455644.vsidx
+/DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/fdda339a-5c84-4469-a646-6a4f9ae3b609.vsidx
