--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@
 /DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/e4531c21-d8de-4627-b8b1-f99919facd4f.vsidx
 /DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/f9c90bb4-730e-446a-b22c-4b1874455644.vsidx
 /DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/fdda339a-5c84-4469-a646-6a4f9ae3b609.vsidx
+/DotNetBackend/ViveksHomoeoClinic/.vs/ViveksHomoeoClinic/FileContentIndex/bdceb60b-3bd1-49b5-9e4e-b47cecd1b1a2.vsidx
