--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@
 /.vs/slnx.sqlite
 /.vs/ViveksHomoeoClinic/FileContentIndex/9993b64c-86ea-48a1-bdcd-8f77c294968f.vsidx
 /.vs/ViveksHomoeoClinic/v17/DocumentLayout.backup.json
+/DotNetBackend/ViveksHomoeoClinic/ViveksHomoeoClinic/bin
+/DotNetBackend/ViveksHomoeoClinic/ViveksHomoeoClinic/obj
